# task1_6

./: CMakeLists.txt  README.md
my_task/: CMakeLists.txt  task.h
my_task/tests/: CMakeLists.txt  tests.cpp
